cmake_minimum_required(VERSION 3.1)
#set (CMAKE_CXX_STANDARD 11)
#set(CMAKE_CXX_COMPILER "/usr/bin/g++-4.9")
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
project(yen-algorithm)
add_executable(yen DijkstraShortestPathAlg.cpp Graph.cpp  main.cpp  YenTopKShortestPathsAlg.cpp)

install(TARGETS yen DESTINATION bin)
